# azusa

./: .gitignore  README.rst  pyproject.toml
scripts/: build_wheel.py  install_wheel.py
src/azusa/: __init__.py  __metadata__.py
src/azusa/query/: __init__.py  _database.py  _typing.py  statements.py  tables.py
src/azusa/text/: __init__.py  _azusa_tags.py  section.py
